--- a/email/templates/reset_password.gohtml
+++ b/email/templates/reset_password.gohtml
@@ -22,6 +22,7 @@
                 src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/toadOcfmlt9b38dHJxOBGFkQc6VGVFSmCnC_l7QZG60.woff) format('woff');
             }
         }
+
         body,
         table,
         td,
@@ -83,7 +84,8 @@
 </head>
 <body style="background-color: #e9ecef;">
 
-<div class="preheader" style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
+<div class="preheader"
+     style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
     Сброс пароля в BOOKSDUMP.
 </div>
 
@@ -100,8 +102,10 @@
             <![endif]-->
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
-                    <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-                        <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Сброс пароля в библиотеку</h1>
+                    <td align="left" bgcolor="#ffffff"
+                        style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
+                        <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">
+                            Сброс пароля в библиотеку</h1>
                     </td>
                 </tr>
             </table>
@@ -126,8 +130,10 @@
 
                 <!-- start copy -->
                 <tr>
-                    <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                        <p style="margin: 0;">Нажми на кнопку для сброса пароля. Если пароль сбрасывать не нужно, то просто проигнорируй это письмо.</p>
+                    <td align="left" bgcolor="#ffffff"
+                        style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
+                        <p style="margin: 0;">Нажми на кнопку для сброса пароля. Если пароль сбрасывать не нужно, то
+                            просто проигнорируй это письмо.</p>
                     </td>
                 </tr>
                 <!-- end copy -->
@@ -141,7 +147,10 @@
                                     <table border="0" cellpadding="0" cellspacing="0">
                                         <tr>
                                             <td align="center" bgcolor="#1a82e2" style="border-radius: 6px;">
-                                                <a href="https://booksdump.com/reset-password/{{ .Token }}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Сбросить пароль</a>
+                                                <a href="https://booksdump.com/reset-password/{{ .Token }}"
+                                                   target="_blank"
+                                                   style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Сбросить
+                                                    пароль</a>
                                             </td>
                                         </tr>
                                     </table>
@@ -154,7 +163,8 @@
 
                 <!-- start copy -->
                 <tr>
-                    <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
+                    <td align="left" bgcolor="#ffffff"
+                        style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
                         <p style="margin: 0;">Хорошего дня,<br> С уважением, BOOKSDUMP</p>
                     </td>
                 </tr>
@@ -168,7 +178,6 @@
             <![endif]-->
         </td>
     </tr>
-
 
 
 </table>
