--- a/external_fb2mobi/profiles/kindle.css
+++ b/external_fb2mobi/profiles/kindle.css
@@ -1,12 +1,11 @@
-
 @page {
     margin-left: 20px;
-    margin-right:20px;
-    margin-top:20px;
-    margin-bottom:5px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 
-.h0 {   
+.h0 {
     font-size: 140%;
     font-weight: bold;
     margin-bottom: 1em;
@@ -74,16 +73,43 @@
 
 .titlenotes p {
     text-indent: 0;
-    text-align: center;    
+    text-align: center;
 }
 
-.indent0 { margin-left: 0pt; text-align: left; }
-.indent1 { margin-left: 10pt; text-align: left; }
-.indent2 { margin-left: 20pt; text-align: left; }
-.indent3 { margin-left: 30pt; text-align: left; }
-.indent4 { margin-left: 40pt; text-align: left; }
-.indent5 { margin-left: 40pt; text-align: left; }
-.indent6 { margin-left: 40pt; text-align: left; }
+.indent0 {
+    margin-left: 0pt;
+    text-align: left;
+}
+
+.indent1 {
+    margin-left: 10pt;
+    text-align: left;
+}
+
+.indent2 {
+    margin-left: 20pt;
+    text-align: left;
+}
+
+.indent3 {
+    margin-left: 30pt;
+    text-align: left;
+}
+
+.indent4 {
+    margin-left: 40pt;
+    text-align: left;
+}
+
+.indent5 {
+    margin-left: 40pt;
+    text-align: left;
+}
+
+.indent6 {
+    margin-left: 40pt;
+    text-align: left;
+}
 
 .anchor {
     vertical-align: super;
@@ -114,6 +140,7 @@
 .strong {
     font-weight: bold;
 }
+
 .strike {
     text-decoration: line-through;
 }
@@ -177,8 +204,8 @@ p.title {
 }
 
 .image img {
-    max-width:100%; 
-    max-height:100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .poem {
@@ -218,7 +245,8 @@ p.title {
     margin-top: 0em;
 }
 
-.inlineimage {}
+.inlineimage {
+}
 
 .inlinenote {
     font-style: italic;
@@ -226,21 +254,21 @@ p.title {
     color: #6e6e6e;
 }
 
-.inlinenote::before { 
-    content: "["; 
-} 
+.inlinenote::before {
+    content: "[";
+}
 
-.inlinenote::after { 
-    content: "]"; 
+.inlinenote::after {
+    content: "]";
 }
 
 .blocknote {
     font-style: italic;
     font-size: 80%;
-    border-radius: 4px; 
-    background: #e6e6fa; 
-    padding: 2px; 
-    border: 1px #505050 solid;  
+    border-radius: 4px;
+    background: #e6e6fa;
+    padding: 2px;
+    border: 1px #505050 solid;
 }
 
 .floatnote {
