--- a/external_fb2mobi/profiles/winfonts.css
+++ b/external_fb2mobi/profiles/winfonts.css
@@ -1,12 +1,11 @@
-
 @page {
     margin-left: 20px;
-    margin-right:20px;
-    margin-top:20px;
-    margin-bottom:5px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 
-.h0 {   
+.h0 {
     font-size: 140%;
     font-weight: bold;
     margin-bottom: 1em;
@@ -55,16 +54,19 @@
     font-family: "paragraph";
     src: url("c:/Windows/Fonts/georgia.ttf");
 }
+
 @font-face {
     font-family: "paragraph";
     src: url("c:/Windows/Fonts/georgiai.ttf");
     font-style: italic;
 }
+
 @font-face {
     font-family: "paragraph";
     src: url("c:/Windows/Fonts/georgiab.ttf");
     font-weight: bold;
 }
+
 @font-face {
     font-family: "paragraph";
     src: url("c:/Windows/Fonts/georgiaz.ttf");
@@ -95,16 +97,43 @@
 
 .titlenotes p {
     text-indent: 0;
-    text-align: center;    
+    text-align: center;
 }
 
-.indent0 { margin-left: 0pt; text-align: left; }
-.indent1 { margin-left: 10pt; text-align: left; }
-.indent2 { margin-left: 20pt; text-align: left; }
-.indent3 { margin-left: 30pt; text-align: left; }
-.indent4 { margin-left: 40pt; text-align: left; }
-.indent5 { margin-left: 40pt; text-align: left; }
-.indent6 { margin-left: 40pt; text-align: left; }
+.indent0 {
+    margin-left: 0pt;
+    text-align: left;
+}
+
+.indent1 {
+    margin-left: 10pt;
+    text-align: left;
+}
+
+.indent2 {
+    margin-left: 20pt;
+    text-align: left;
+}
+
+.indent3 {
+    margin-left: 30pt;
+    text-align: left;
+}
+
+.indent4 {
+    margin-left: 40pt;
+    text-align: left;
+}
+
+.indent5 {
+    margin-left: 40pt;
+    text-align: left;
+}
+
+.indent6 {
+    margin-left: 40pt;
+    text-align: left;
+}
 
 
 .anchor {
@@ -132,6 +161,7 @@
 .strong {
     font-weight: bold;
 }
+
 .strike {
     text-decoration: line-through;
 }
@@ -143,6 +173,7 @@
     margin-bottom: 0.2em;
     font-style: italic;
 }
+
 .text-author {
     page-break-before: avoid;
     text-align: right;
@@ -166,7 +197,7 @@ p {
     margin-bottom: 0pt;
     margin-top: 0pt;
     text-align: justify;
-    padding-bottom: 0.5em; 
+    padding-bottom: 0.5em;
 }
 
 p.title {
@@ -185,9 +216,10 @@ p.title {
     text-indent: 0em;
     text-align: center;
 }
+
 .image img {
-    max-width:100%; 
-    max-height:100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .poem {
@@ -227,7 +259,8 @@ p.title {
     margin-top: 0em;
 }
 
-.inlineimage {}
+.inlineimage {
+}
 
 .inlinenote {
     font-style: italic;
@@ -238,10 +271,10 @@ p.title {
 .blocknote {
     font-style: italic;
     font-size: 80%;
-    border-radius: 4px; 
-    background: #e6e6fa; 
-    padding: 2px; 
-    border: 1px #505050 solid;  
+    border-radius: 4px;
+    background: #e6e6fa;
+    padding: 2px;
+    border: 1px #505050 solid;
 }
 
 .floatnote {
