method for activate user or change password

--- a/email/templates/reset_password.gohtml
+++ b/email/templates/reset_password.gohtml
@@ -105,7 +105,7 @@
                     <td align="left" bgcolor="#ffffff"
                         style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
                         <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">
-                            Сброс пароля в библиотеку</h1>
+                            {{ .Title }}</h1>
                     </td>
                 </tr>
             </table>
@@ -132,8 +132,7 @@
                 <tr>
                     <td align="left" bgcolor="#ffffff"
                         style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                        <p style="margin: 0;">Нажми на кнопку для сброса пароля. Если пароль сбрасывать не нужно, то
-                            просто проигнорируй это письмо.</p>
+                        <p style="margin: 0;">{{ .Message }}</p>
                     </td>
                 </tr>
                 <!-- end copy -->
@@ -147,10 +146,9 @@
                                     <table border="0" cellpadding="0" cellspacing="0">
                                         <tr>
                                             <td align="center" bgcolor="#1a82e2" style="border-radius: 6px;">
-                                                <a href="https://booksdump.com/reset-password/{{ .Token }}"
+                                                <a href="{{ .Token }}"
                                                    target="_blank"
-                                                   style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Сбросить
-                                                    пароль</a>
+                                                   style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">{{ .Button }}</a>
                                             </td>
                                         </tr>
                                     </table>
@@ -165,7 +163,7 @@
                 <tr>
                     <td align="left" bgcolor="#ffffff"
                         style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
-                        <p style="margin: 0;">Хорошего дня,<br> С уважением, BOOKSDUMP</p>
+                        <p style="margin: 0;">{{ .Thanks }}}</p>
                     </td>
                 </tr>
                 <!-- end copy -->
