--- a/email/templates/reset_password.gohtml
+++ b/email/templates/reset_password.gohtml
@@ -163,7 +163,7 @@
                 <tr>
                     <td align="left" bgcolor="#ffffff"
                         style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
-                        <p style="margin: 0;">{{ .Thanks }}}</p>
+                        <p style="margin: 0;">{{ .Thanks }}</p>
                     </td>
                 </tr>
                 <!-- end copy -->
