--- a/booksdump-frontend/src/components/styles/BooksList.css
+++ b/booksdump-frontend/src/components/styles/BooksList.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: flex-end; /* Выравнивание по правому краю */
+    align-items: flex-end; /* Right edge alignment */
 }
 
 .download-buttons > * {
