--- a/booksdump-frontend/src/components/styles/Footer.css
+++ b/booksdump-frontend/src/components/styles/Footer.css
@@ -2,14 +2,14 @@
 .footer {
     background-color: #333;
     color: white;
-    padding: 2px 10px; /* Отступ в 10 пикселей */
+    padding: 2px 10px; /* 10 pixel padding */
     width: 100%;
     position: relative;
     font-size: 10px;
     margin-top: auto;
     display: flex;
     justify-content: space-between;
-    align-items: center; /* Выравнивание по вертикали */
+    align-items: center; /* Vertical alignment */
 }
 
 .footer .left {
@@ -21,10 +21,10 @@
 }
 
 .footer a {
-    color: white; /* Цвет ссылки такой же, как и у текста */
-    text-decoration: none; /* Убираем подчеркивание */
+    color: white; /* Link color same as text */
+    text-decoration: none; /* Remove underline */
 }
 
 .footer a:hover {
-    text-decoration: underline; /* Подчеркивание при наведении */
+    text-decoration: underline; /* Underline on hover */
 }
