--- a/booksdump-frontend/src/index.css
+++ b/booksdump-frontend/src/index.css
@@ -2,7 +2,7 @@
 @import './transitions.css';
 
 body {
-  background-color: #b3b3b3 !important;
+  /* Background now comes from MUI CssBaseline and theme */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
